add new Client in ClientDemo.html

--- a/src/main/resources/templates/Demo/ClientDemo.html
+++ b/src/main/resources/templates/Demo/ClientDemo.html
@@ -68,9 +68,9 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>Stepanov</td>
-          <td>Alexander</td>
-          <td>Alexeevixh</td>
+          <td>Kuliashov</td>
+          <td>Vadim</td>
+          <td>Sergeevich</td>
           <td>Male</td>
           <td>88005553555</td>
           <td>01.01.2000</td>
